syntax = "proto3";
package protos;

// This message type is used between consensus and outside
message SessionMessage {
    enum Type {
        CONSENSUS = 0;
        FOWARD_TX = 1;
        SYNC_REPLICA = 2;
        UNICAST_INVALID = 3;
        BROADCAST_SINGLE_BLK = 4;
        UNICAST_BLK = 5;
        SYNC_REQ = 6;
        SYNC_WORLD_STATE = 7;
        SEND_WS_HS = 8;
        SYNC_WS_HS = 9;
        SEND_WS_ACK = 10;
        SEND_WORLD_STATE = 11;
        ADD_PEER = 12;
        DEL_PEER = 13;
        TRANSIT_BLOCK = 14;
        NVP_RELAY = 15;
        NVP_CONSULT = 16;
        NVP_CONSULT_REPLY = 17;
    }
    Type type = 1;
    bytes payload = 2;
}

